<resources>
    <string name="app_name">CodeBreaker</string>
    <string name="codebreaker">CodeBreaker</string>
    <string name="play_game">Play</string>
    <string name="highscore">HighScore</string>
    <string name="settings">Settings</string>
    <string name="r">R</string>
    <string name="b">B</string>
    <string name="g">G</string>
    <string name="y">Y</string>
    <string name="del">⌫</string>
    <string name="guess_the_combination">Guess the combination</string>
    <string name="submit">Submit</string>
    <string name="create_highscore">Highscore :</string>
    <string name="create_name">Name :</string>
    <string name="clear_highscore">Clear Highscore</string>
    <string name="back">Back</string>
    <string name="an_educational_app">An Educational App</string>
    <string name="app_by_andrew">App By Andrew</string>
</resources>