<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainmenu_bg">

        <Button
            android:id="@+id/menu_highscore"
            style="@style/mainmenu"
            android:layout_width="234dp"
            android:layout_height="61dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bowlby_one_sc"
            android:text="@string/highscore"
            android:textAlignment="center"
            android:textSize="24sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_play" />

        <Button
            android:id="@+id/menu_play"
            style="@style/mainmenu"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/bowlby_one_sc"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/play_game"
            android:textAlignment="center"
            android:textSize="34sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codebreaker_title" />

        <TextView
            android:id="@+id/codebreaker_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="212dp"
            android:fontFamily="@font/francois_one"
            android:text="@string/codebreaker"
            android:textAlignment="center"
            android:textColor="#8A2828"
            android:textSize="65sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/menu_setting"
            style="@style/setting"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            android:src="@drawable/setting_gear"
            app:background="@drawable/setting_button"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>