<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_highscore"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/create_highscore_score_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/francois_one"
                android:text="@string/create_highscore"
                android:textAlignment="textEnd"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/create_highscore_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/francois_one"
                android:textAlignment="textStart"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="@id/create_highscore_score_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/create_highscore_score_header"
                app:layout_constraintTop_toTopOf="@id/create_highscore_score_header"
                tools:text="user score" />

            <TextView
                android:id="@+id/create_highscore_name_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:fontFamily="@font/francois_one"
                android:text="@string/create_name"
                android:textAlignment="textEnd"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/create_highscore_score_header"
                app:layout_constraintTop_toBottomOf="@id/create_highscore_score_header" />

            <EditText
                android:id="@+id/create_highscore_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Enter Name"
                android:fontFamily="@font/francois_one"
                android:inputType="text"
                android:maxLength="7"
                android:textAlignment="viewStart"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="@+id/create_highscore_name_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/create_highscore_name_header"
                app:layout_constraintTop_toTopOf="@id/create_highscore_name_header"
                tools:ignore="LabelFor"
                tools:text="user name" />

            <Button
                android:id="@+id/create_highscore_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/bowlby_one_sc"
                android:text="@string/submit"
                android:textSize="20sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_highscore_name_header" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>